--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "alife-file-to-base64": "0.0.4",
     "bootstrap": "^5.0.2",
     "ng-sidebar": "^9.4.2",
     "ngx-swiper-wrapper": "^10.0.0",
